django auth setup done

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -18,7 +18,7 @@
         
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Dealership Review</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,9 +44,9 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
+              </li> -->
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -54,13 +54,17 @@
             </form>
           </div>
           {% if user.is_authenticated %}
-            <li>
-                <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                <a class="btn btn-link" href="">Logout</a>
-            </li>
+            <div class="rightalign">
+                <div class="dropdown">
+                    <button class="dropbtn">{{user.first_name}}/{{user.username}}</button>
+                    <div class="dropdown-content">
+                        <a href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </div>
+                </div>
+            </div>
             {% else %}
-            <!-- <li>
-                <form class="form-inline" action="" method="post">
+            <li class="d-flex">
+                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
                     {% csrf_token %}
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Username" name="username" >
@@ -68,8 +72,9 @@
                         <button class="btn btn-primary" type="submit">Login</button>
                     </div>
                 </form>
-            </li> -->
-            <a class="btn btn-link" href="">Sign Up</a>
+                
+                <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+            </li>
             {% endif %}
         </div>
       </nav>
