--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     {% load static %}
+     {% load static %}
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
@@ -11,6 +13,49 @@
 
 </head>
     <body>
+        <!-- Modern Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">🚗 Dealership Review</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact">Contact</a>
+                </li>
+            </ul>
+
+            <!-- Conditional Authentication -->
+            {% if user.is_authenticated %}
+            <div class="dropdown">
+                <button class="dropbtn dropdown-toggle" data-bs-toggle="dropdown">
+                    {{ user.first_name }} / {{ user.username }}
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="{% url 'djangoapp:logout' %}">Logout</a></li>
+                </ul>
+            </div>
+            {% else %}
+            <form class="d-flex" action="{% url 'djangoapp:login' %}" method="post">
+                {% csrf_token %}
+                <input class="form-control me-2" type="text" placeholder="Username" name="username">
+                <input class="form-control me-2" type="password" placeholder="Password" name="psw">
+                <button class="btn btn-light" type="submit">Login</button>
+            </form>
+            <a class="btn btn-outline-light ms-2" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+            {% endif %}
+        </div>
+    </div>
+</nav>
     <!--Add review form here -->
     </body>
 </html>
