--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -3,83 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <title>Dealership Review</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-
+    
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Google Fonts for Modern Typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link />
+    <style>
+        /* Responsive Dealer Section */
+        .dealer-container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 
-    <body>
-    <!--Add a nav bar here -->
-        
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Dealership Review</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<body>
+
+<!-- Modern Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">🚗 Dealership Review</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/conatct">Contact</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li> -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact">Contact</a>
+                </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-          {% if user.is_authenticated %}
-            <div class="rightalign">
-                <div class="dropdown">
-                    <button class="dropbtn">{{user.first_name}}/{{user.username}}</button>
-                    <div class="dropdown-content">
-                        <a href="{% url 'djangoapp:logout' %}">Logout</a>
-                    </div>
-                </div>
+
+            <!-- Conditional Authentication -->
+            {% if user.is_authenticated %}
+            <div class="dropdown">
+                <button class="dropbtn dropdown-toggle" data-bs-toggle="dropdown">
+                    {{ user.first_name }} / {{ user.username }}
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="{% url 'djangoapp:logout' %}">Logout</a></li>
+                </ul>
             </div>
             {% else %}
-            <li class="d-flex">
-                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Username" name="username" >
-                        <input type="password" class="form-control" placeholder="Password" name="psw" >
-                        <button class="btn btn-primary" type="submit">Login</button>
-                    </div>
-                </form>
-                
-                <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-            </li>
+            <form class="d-flex" action="{% url 'djangoapp:login' %}" method="post">
+                {% csrf_token %}
+                <input class="form-control me-2" type="text" placeholder="Username" name="username">
+                <input class="form-control me-2" type="password" placeholder="Password" name="psw">
+                <button class="btn btn-light" type="submit">Login</button>
+            </form>
+            <a class="btn btn-outline-light ms-2" href="{% url 'djangoapp:registration' %}">Sign Up</a>
             {% endif %}
         </div>
-      </nav>
-    <!--Add a dealer table here -->
+    </div>
+</nav>
 
-    </body>
+<!-- Dealers Table -->
+<div class="container my-5 dealer-container">
+    <h3 class="text-center mb-4">🚙 Available Dealers</h3>
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Full Name</th>
+                <th scope="col">City</th>
+                <th scope="col">State (Short)</th>
+                <th scope="col">Address (Long, Lat)</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if dealerships %}
+                {% for dealer in dealerships %}
+                <tr>
+                    <th scope="row">{{ dealer.id }}</th>
+                    <td>{{ dealer.full_name }}</td>
+                    <td>{{ dealer.city }}</td>
+                    <td>{{ dealer.state }} | {{ dealer.st }}</td>
+                    <td>{{ dealer.long }}, {{ dealer.lat }}</td>
+                </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="5" class="text-center text-muted">No dealers available at the moment.</td>
+                </tr>
+            {% endif %}
+        </tbody>
+    </table>
+</div>
 
+<!-- Bootstrap 5 JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 </html>
