--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -2,60 +2,165 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Post Review | Dealership Review</title>
+
     {% load static %}
-     {% load static %}
+
+    <!-- Global Custom Styles -->
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
+
+    <!-- Bootstrap 4.5.2 CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
 
+    <!-- Bootstrap Datepicker CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
+
+    <!-- jQuery (compatible with Bootstrap 4) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <!-- Bootstrap 4 JS -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Bootstrap Datepicker JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 </head>
-    <body>
-        <!-- Modern Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">🚗 Dealership Review</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
-            <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
-                </li>
-            </ul>
+<body>
+    <!-- Modern Navigation Bar -->
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">🚗 Dealership Review</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-            <!-- Conditional Authentication -->
-            {% if user.is_authenticated %}
-            <div class="dropdown">
-                <button class="dropbtn dropdown-toggle" data-bs-toggle="dropdown">
-                    {{ user.first_name }} / {{ user.username }}
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="{% url 'djangoapp:logout' %}">Logout</a></li>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">Contact</a>
+                    </li>
                 </ul>
+
+                <!-- Conditional Authentication -->
+                {% if user.is_authenticated %}
+                <div class="dropdown">
+                    <button class="btn btn-warning dropdown-toggle" type="button" data-toggle="dropdown">
+                        {{ user.first_name }} / {{ user.username }}
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <a class="dropdown-item" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </div>
+                </div>
+                {% else %}
+                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                    {% csrf_token %}
+                    <input class="form-control mr-sm-2" type="text" placeholder="Username" name="username">
+                    <input class="form-control mr-sm-2" type="password" placeholder="Password" name="psw">
+                    <button class="btn btn-light" type="submit">Login</button>
+                </form>
+                <a class="btn btn-outline-light ml-2" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                {% endif %}
             </div>
-            {% else %}
-            <form class="d-flex" action="{% url 'djangoapp:login' %}" method="post">
-                {% csrf_token %}
-                <input class="form-control me-2" type="text" placeholder="Username" name="username">
-                <input class="form-control me-2" type="password" placeholder="Password" name="psw">
-                <button class="btn btn-light" type="submit">Login</button>
-            </form>
-            <a class="btn btn-outline-light ms-2" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-            {% endif %}
         </div>
-    </div>
-</nav>
-    <!--Add review form here -->
-    </body>
+    </nav>
+
+    <!-- Add review form in here -->
+<!-- Add review form in here -->
+<div class="container mt-5">
+    <h2 class="text-center">Post a Review</h2>
+
+    <!-- Review Form -->
+    <form id="reviewForm">
+        {% csrf_token %}
+
+        <!-- Review Information -->
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+
+        <div class="form-group">
+            <label for="review">Review</label>
+            <textarea class="form-control" id="review" name="review" rows="5" required></textarea>
+        </div>
+
+        <!-- Car Information -->
+        <fieldset class="mt-4">
+            <legend>Car Information</legend>
+            <div class="form-group">
+                <label for="car_make">Car Make</label>
+                <input type="text" class="form-control" id="car_make" name="car_make" required>
+            </div>
+
+            <div class="form-group">
+                <label for="car_model">Car Model</label>
+                <input type="text" class="form-control" id="car_model" name="car_model" required>
+            </div>
+
+            <div class="form-group">
+                <label for="car_year">Car Year</label>
+                <input type="number" class="form-control" id="car_year" name="car_year" required>
+            </div>
+        </fieldset>
+
+        <!-- Purchase Information -->
+        <fieldset class="mt-4">
+            <legend>Purchase Information</legend>
+            <div class="form-group">
+                <label for="purchase">Did you make a purchase?</label>
+                <select class="form-control" id="purchase" name="purchase" required>
+                    <option value="True">Yes</option>
+                    <option value="False">No</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="purchase_date">Purchase Date</label>
+                <input type="date" class="form-control" id="purchase_date" name="purchase_date" required>
+            </div>
+        </fieldset>
+
+        <button type="submit" class="btn btn-primary mt-3">Submit Review</button>
+    </form>
+
+    <div id="responseMessage" class="mt-3"></div>
+</div>
+
+<!-- jQuery and AJAX script -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('#reviewForm').on('submit', function(event) {
+            event.preventDefault();  // Prevent the form from submitting normally
+
+            // Serialize the form data
+            var formData = $(this).serialize();
+
+            // Perform the AJAX request
+            $.ajax({
+                url: "{% url 'djangoapp:add_review' dealer_id=11 %}",  // URL to submit the form to
+                type: "POST",  // HTTP method
+                data: formData,  // Data to send
+                success: function(response) {
+                    // Handle the response from the server (e.g., success message)
+                    $('#responseMessage').html('<div class="alert alert-success">Review submitted successfully!</div>');
+                    $('#reviewForm')[0].reset();  // Reset the form after submission
+                },
+                error: function(xhr, status, error) {
+                    // Handle errors (e.g., validation errors)
+                    $('#responseMessage').html('<div class="alert alert-danger">There was an error submitting your review. Please try again.</div>');
+                }
+            });
+        });
+    });
+</script>
+
+
+</body>
 </html>
