--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -126,10 +126,14 @@
             </div>
         </fieldset>
 
+        <div id="responseMessage" class="mt-3">
+            {% if error_msg %}
+                <div class="alert alert-danger">{{error_msg}}</div>
+            {% endif %}
+        </div>
         <button type="submit" class="btn btn-primary mt-3">Submit Review</button>
     </form>
 
-    <div id="responseMessage" class="mt-3"></div>
 </div>
 
 <!-- jQuery and AJAX script -->
@@ -144,16 +148,18 @@
 
             // Perform the AJAX request
             $.ajax({
-                url: "{% url 'djangoapp:add_review' dealer_id=11 %}",  // URL to submit the form to
+                url: "{% url 'djangoapp:add_review' dealer_id=dealer_id %}",  // URL to submit the form to
                 type: "POST",  // HTTP method
                 data: formData,  // Data to send
                 success: function(response) {
                     // Handle the response from the server (e.g., success message)
+                    console.log(response)
                     $('#responseMessage').html('<div class="alert alert-success">Review submitted successfully!</div>');
                     $('#reviewForm')[0].reset();  // Reset the form after submission
                 },
                 error: function(xhr, status, error) {
                     // Handle errors (e.g., validation errors)
+                    console.log(error)
                     $('#responseMessage').html('<div class="alert alert-danger">There was an error submitting your review. Please try again.</div>');
                 }
             });
