--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -16,7 +16,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
 
     <!-- jQuery (compatible with Bootstrap 4) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- Bootstrap 4 JS -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
@@ -73,40 +73,27 @@
     <!-- Add review form in here -->
 <!-- Add review form in here -->
 <div class="container mt-5">
-    <h2 class="text-center">Post a Review</h2>
+    <h2 class="text-center">Post a Review about {{dealer.full_name}}</h2>
 
     <!-- Review Form -->
     <form id="reviewForm">
         {% csrf_token %}
 
         <!-- Review Information -->
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" required>
-        </div>
 
         <div class="form-group">
             <label for="review">Review</label>
-            <textarea class="form-control" id="review" name="review" rows="5" required></textarea>
+            <textarea class="form-control" id="review" name="review" rows="5" placeholder="Place your review here..." required></textarea>
         </div>
 
         <!-- Car Information -->
         <fieldset class="mt-4">
             <legend>Car Information</legend>
-            <div class="form-group">
-                <label for="car_make">Car Make</label>
-                <input type="text" class="form-control" id="car_make" name="car_make" required>
-            </div>
-
-            <div class="form-group">
-                <label for="car_model">Car Model</label>
-                <input type="text" class="form-control" id="car_model" name="car_model" required>
-            </div>
-
-            <div class="form-group">
-                <label for="car_year">Car Year</label>
-                <input type="number" class="form-control" id="car_year" name="car_year" required>
-            </div>
+            <select name="car" id="car" class="form-select form-group" required>
+                {% for car in cars %}
+                    <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
+                {% endfor %}
+           </select>
         </fieldset>
 
         <!-- Purchase Information -->
@@ -114,16 +101,10 @@
             <legend>Purchase Information</legend>
             <div class="form-group">
                 <label for="purchase">Did you make a purchase?</label>
-                <select class="form-control" id="purchase" name="purchase" required>
-                    <option value="True">Yes</option>
-                    <option value="False">No</option>
-                </select>
+                <input type="checkbox" id="purchase" name="purchase"  />
             </div>
 
-            <div class="form-group">
-                <label for="purchase_date">Purchase Date</label>
-                <input type="date" class="form-control" id="purchase_date" name="purchase_date" required>
-            </div>
+            <input class="date-own form-control form-group" type="date" name="purchase_date" id="purchasedate">
         </fieldset>
 
         <div id="responseMessage" class="mt-3">
@@ -147,8 +128,9 @@
             var formData = $(this).serialize();
 
             // Perform the AJAX request
+            var dealer_id = 
             $.ajax({
-                url: "{% url 'djangoapp:add_review' dealer_id=dealer_id %}",  // URL to submit the form to
+                url: "{% url 'djangoapp:add_review' dealer_id=dealer.id %}",  // URL to submit the form to
                 type: "POST",  // HTTP method
                 data: formData,  // Data to send
                 success: function(response) {
@@ -166,7 +148,13 @@
         });
     });
 </script>
-
+<script type="text/javascript">
+    $(function() {
+        $('.date-own').datepicker({
+            format: 'mm/dd/yyyy'
+        });
+    });
+</script>
 
 </body>
 </html>
