--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -73,7 +73,7 @@
     <!-- Add review form in here -->
 <!-- Add review form in here -->
 <div class="container mt-5">
-    <h2 class="text-center">Post a Review about {{dealer.full_name}}</h2>
+    <h2 class="text-center" data-dealer-id={{dealer.id}}>Post a Review about {{dealer.full_name}}</h2>
 
     <!-- Review Form -->
     <form id="reviewForm">
